# bitlbee-gvoice

./: README.md  configure.ac  gvoice.c
